adding private toggle for tags
