# server/src/services/tag.service.ts
@@ -44,12 +44,14 @@ export class TagService extends BaseService {
 
     const userId = auth.user.id;
     const value = parent ? `${parent.value}/${dto.name}` : dto.name;
+    const color = dto.color;
+    const isPrivate = dto.isPrivate;
     const duplicate = await this.tagRepository.getByValue(userId, value);
     if (duplicate) {
       throw new BadRequestException(`A tag with that name already exists`);
     }
 
-    const tag = await this.tagRepository.create({ userId, value, parent });
+    const tag = await this.tagRepository.create({ userId, value, parent, color, isPrivate });
 
     return mapTag(tag);
   }
@@ -57,8 +59,9 @@ export class TagService extends BaseService {
   async update(auth: AuthDto, id: string, dto: TagUpdateDto): Promise<TagResponseDto> {
     await this.requireAccess({ auth, permission: Permission.TAG_UPDATE, ids: [id] });
 
-    const { color } = dto;
-    const tag = await this.tagRepository.update({ id, color });
+    const { color, isPrivate, name: value } = dto;
+
+    const tag = await this.tagRepository.update({ id, color, value, isPrivate });
     return mapTag(tag);
   }
 
